--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,9 @@ jobs:
           java-version: '17'
 
       - name: Run tests
+        env:
+          INSTASHARE_APP_JWT_SECRET: ${{ secrets.INSTASHARE_APP_JWT_SECRET }}
+          AWS_S3_ACCESS_KEY_ID: ${{ secrets.AWS_S3_ACCESS_KEY_ID }}
+          AWS_S3_SECRET_ACCESS_KEY: ${{ secrets.AWS_S3_SECRET_ACCESS_KEY }}
+
         run: mvn -B test --file pom.xml
