--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,10 @@ jobs:
           INSTASHARE_APP_JWT_SECRET: ${{ secrets.INSTASHARE_APP_JWT_SECRET }}
           AWS_S3_ACCESS_KEY_ID: ${{ secrets.AWS_S3_ACCESS_KEY_ID }}
           AWS_S3_SECRET_ACCESS_KEY: ${{ secrets.AWS_S3_SECRET_ACCESS_KEY }}
+          CODECOV_TOKEN: ${{ secrets.CODE_COVERAGE_TOKEN }}
 
         run: |
           mvn -B test --file pom.xml
           curl -Os https://uploader.codecov.io/latest/linux/codecov
           chmod +x codecov
-          ./codecov
+          ./codecov -t "${CODECOV_TOKEN}"
